[metadata]
name = hpe-openstack-tools
summary = Dumping ground for general purpose OpenStack tools and scripts
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    hpe_os_tools

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = hpe_os_tools/locale
domain = hpe-openstack-tools

[update_catalog]
domain = hpe-openstack-tools
output_dir = hpe_os_tools/locale
input_file = hpe_os_tools/locale/hpe-openstack-tools.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hpe_os_tools/locale/hpe-openstack-tools.pot
